# picocoap

./: .gitignore  CMakeLists.txt  Makefile  Modality.toml  SUT.toml  cmake_install.cmake  first-objective.toml  generated_component_definitions.h  modrun.sh  picocoap-client
examples/posix/: client.c
generated_mutators/: send_skip.c  send_skip.h
my-component/: Component.toml  events.csv  probes.csv
my-component/mutators/: send_skip.toml
